// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with a time 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <span
    className="components-time-grid-row-m__date"
  >
    Monday
  </span>
  <span
    className="components-time-grid-row-m__time"
  >
    23:00
  </span>
</GridRow>
`;

exports[`should render correctly with a times range 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <span
    className="components-time-grid-row-m__date"
  >
    Monday
  </span>
  <span
    className="components-time-grid-row-m__times-range"
  >
    From 
    22:00
  </span>
</GridRow>
`;

exports[`should render correctly with audience tags 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <span
    className="components-time-grid-row-m__date"
  >
    Monday
  </span>
  <span
    className="components-time-grid-row-m__time"
  >
    23:00
  </span>
  <div
    className="components-time-grid-row-m__tags"
  >
    <span
      className="components-time-grid-row-m__tag"
      key="tag-id"
    >
      Tag Label
    </span>
  </div>
</GridRow>
`;
